--- a/src/testcardgen/testcardgen.csproj
+++ b/src/testcardgen/testcardgen.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="pythonnet" Version="3.1.0-preview2023-09-17" />
+    <PackageReference Include="Wacton.Desu" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
